avahi (0.6.19-1) unstable; urgency=low

  * New upstream release
  * debian/libavahi-ui0.install,
    debian/libavahi-ui0.links:
    + Update for the new binary names which are upstream now.
  * debian/patches/11_avahi-autoipd.action-add-routes.patch:
    + Fix patch header to patch the real source file and actually apply.
      Thanks to Martin Pitt for noticing.
  * debian/patches/12_avahi-autoipd-dhcp-exit-hook-take-down.patch,
    debian/patches/20_avahi-ui-non-existing-domain-segv.patch,
    debian/patches/25_avahi_fix_desktop_files.patch:
    + Dropped, merged upstream.

 -- Sebastian Dröge <slomo@debian.org>  Thu, 17 May 2007 13:48:26 +0200

avahi (0.6.18-5) unstable; urgency=low

  * debian/avahi-daemon.init: Don't report failure when stopping an already
    stopped daemon (Closes: #421928)
  * debian/avahi-daemon-check-dns.sh: Explicitly set $PATH so programs in
    /usr/bin are also found (Closes: #421360)
  * debian/rules, debian/libavahi-ui0.links: Rename zssh and zvnc to bssh and
    bvnc. Upstream will have this renaming in their next release 
    (Closes: #421473)

 -- Sjoerd Simons <sjoerd@debian.org>  Thu, 03 May 2007 19:06:17 +0200

avahi (0.6.18-4) unstable; urgency=low

  [ Sjoerd Simons ]
  * debian/rules:
    + Ensure that ServiceTypeDatabase.py is generated instead of using the one
      from the tarball (Closes: #420184)
  * debian/avahi-daemon-check-dns.sh:
    + Minimise the number of times the DNS servers are checked for a unicast
      .local domain even more.  (Closes: #419796)
    + Use invoke-rc.d to start/stop avahi as we're a proper sysv init service
      now
  * debian/avahi-daemon.{ifupdown,resolvconf}:
    + Check if avahi-daemon-check-dns.sh is executable before executing it
      (Closes:  #419259)
  * debian/rules:
    + Disable gcc's strack protection on all archs except those that actually
      support it (powerpc s390 sparc amd64 i386). Fixes FTBS on the other
      architectures.